syntax = "proto3";

package org.corfudb.format;
option java_package = "org.corfudb.runtime";

import "google/protobuf/descriptor.proto";
import "google/protobuf/any.proto";

message Timestamp {
    int64 epoch = 1;
    int64 sequence = 2;
}

message TableName {
    string namespace = 1;
    string table_name = 2;
}

message TableDescriptors {
    google.protobuf.DescriptorProto keyDescriptor = 1;
    google.protobuf.DescriptorProto valueDescriptor = 2;
}

message TableMetadata {
    TableName table_name = 1;
    bool disk_based = 2;
    bool cache = 3;
}

message RecordMetadata {
    int64 version = 1;
    string created_user = 2;
    string last_modified_user = 3;
    int64 create_time = 4;
    int64 last_modified_time = 5;
}

message Record {
    google.protobuf.Any payload = 1;
    RecordMetadata metadata = 2;
}